# ChangeLog for media-libs/libsdl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libsdl/ChangeLog,v 1.233 2015/03/31 09:25:24 patrick Exp $

*libsdl-1.2.15-r4 (31 Mar 2015)

  31 Mar 2015; Patrick Lauer <patrick@gentoo.org> +libsdl-1.2.15-r4.ebuild:
  Restore stable

  31 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> -libsdl-1.2.15-r4.ebuild:
  old

  31 Mar 2015; <jmorgan@gentoo.org> libsdl-1.2.15-r8.ebuild:
  ppc64 stable wrt #522270

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> libsdl-1.2.15-r8.ebuild:
  add arm64 support, tested on A53 board

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> libsdl-1.2.15-r8.ebuild:
  Stable for ppc, wrt bug #522270

  15 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
  +files/libsdl-1.2.15-bsd-joystick.patch, libsdl-1.2.15-r8.ebuild:
  add upstream BSD joystick patch for bug #477730

  15 Oct 2014; Pacho Ramos <pacho@gentoo.org> libsdl-1.2.15-r8.ebuild:
  amd64 stable, bug #522270

  15 Oct 2014; Pacho Ramos <pacho@gentoo.org> libsdl-1.2.15-r8.ebuild:
  x86 stable, bug #522270

  21 Sep 2014; Markus Meier <maekke@gentoo.org> libsdl-1.2.15-r8.ebuild:
  arm stable, bug #522270

  10 Sep 2014; Jeroen Roovers <jer@gentoo.org> libsdl-1.2.15-r8.ebuild:
  Stable for HPPA (bug #522270).

  26 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org> -libsdl-1.2.15-r7.ebuild:
  old

*libsdl-1.2.15-r8 (25 Jul 2014)

  25 Jul 2014; Alfredo Tupone <tupone@gentoo.org> +libsdl-1.2.15-r8.ebuild:
  Removing a dependency on x11-libs/libXt Fix bug #514378

  30 Jun 2014; Julian Ospald <hasufell@gentoo.org> -libsdl-1.2.15-r5.ebuild,
  -libsdl-1.2.15-r6.ebuild:
  remove old

*libsdl-1.2.15-r7 (30 Jun 2014)

  30 Jun 2014; Julian Ospald <hasufell@gentoo.org> +libsdl-1.2.15-r7.ebuild,
  +files/libsdl-1.2.15-caca.patch:
  fix various multilib failures wrt #514486

  25 Jun 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>