@@ -6,7 +6,6 @@ AUX libsdl-1.2.15-joystick.patch 315 SHA256 fa912a36cf6a0926e91a34efa756d3514bb4
 AUX libsdl-1.2.15-resizing.patch 2098 SHA256 0e4c2c4a11dbf611e317be4e866f99bde619eb1ca3942524e96b7ef94d8180f4 SHA512 afa82d81e03fe974b2c1a4f3c9ed48a15472784548c8e88f988bb03ea992e8ce86bbad74f7e5980dd1476139cf82180eda72e77041e065925cb373cda47c268b WHIRLPOOL a298ec48388f2f34dfd3c40a5912fc1ec47ff9a19983054f78544f6794873a42090010b4b606c9c9f2dfa7ea6ee447e87915a733e34431b7db7ae39a23c605ee
 AUX libsdl-1.2.15-sdl-config.patch 780 SHA256 1c73cc815ae4f6fdaee3dc899a9f38e9f29f88e3997070c9fba226b36dbed015 SHA512 c79b0b5674a2a70862425150d8b481f1a0ed0bc400bc69835e53932422583bdde061d1f72da8d3ad0aaaa4499126bc2770f11941435e6c848bd4d90d040a0d03 WHIRLPOOL 5762b64726808967cd51215b1fd04c3cd52baa9517b25c30c99e669d450f19666d7179c9c69bf8d6a09ac109d52148fee0bbaa458ab77aacddf793914faf1c80
 DIST SDL-1.2.15.tar.gz 3920622 SHA256 d6d316a793e5e348155f0dd93b979798933fb98aa1edebcc108829d6474aad00 SHA512 ac392d916e6953b0925a7cbb0f232affea33339ef69b47a0a7898492afb9784b93138986df53d6da6d3e2ad79af1e9482df565ecca30f89428be0ae6851b1adc WHIRLPOOL 21b9aadb7b00002a6f3760902cd40aeb1b145228348b887049b40a435c2b9a1a3679a83100421e9634178b9da32d524371d6912c190a75e83ef3170ad45bc159
-EBUILD libsdl-1.2.15-r4.ebuild 4217 SHA256 94b3e983bf0c077f68013eaf336bd75ea7e2b9627b950648a3fb2ef1399d25d4 SHA512 ff9ac5f477547162f7c068148b597df053b11c897506405ad9f25ad0d21bd32921a2319fa880786731c044fedc9a6afb4389a59c1fb51e94d2839cd4453a5bdc WHIRLPOOL 0b6584ec66c0edafc35f2edd9b978c0cb311f28e632ed0ca1d44b1b6a3bd312e89324938dde5567d8b91299e1333d78442433200caa7618992c2fb69836e4029
 EBUILD libsdl-1.2.15-r8.ebuild 4396 SHA256 120bb8ba56e606684a1c7015f65fe599bfa090c86f95bfa607a434b630f985d9 SHA512 266f505517d63838ef0c63d26dbd9070ead6e4171e8c720d29b8c253bcfb187d39af0893356391b8616dd1ed0fbfa49c045d18a987bebe4433186f1d9152c597 WHIRLPOOL 47efa2269c88c7d290551d4c0e22809ba9e7e026af30e42017ee00baa3af09f907a780ac8499b87c4987806b59a9ecb8e9d285a808b6ed6c3e36728826ac1334
-MISC ChangeLog 35408 SHA256 c290c640151dd08233fc5b94513621b80f3604ab9fd0cb55f4a1f1d723a36d98 SHA512 e7b5124081f2d5d3219743304fe68c9e12f81935013246d670588c1aa64deeb88cdbb7b82d4ae628b4fcee608d089a37f5a71028633fbfd8d988c0b9964a2d69 WHIRLPOOL 62d7ce747fb9076035b1b9862452926ac8898e4ac16b934519e3474a958e313231ecfd972eeaa5c45c0d18ccb999023e18d192cf1aa6f5032739e11d5251b317
+MISC ChangeLog 35498 SHA256 77a1ee04ff9c8d766630473cbb3408e8d6cf97482da583dd1ba315a62e825b5a SHA512 d9c24c6b5fd9fe497c9a7cdd56a3fe8fac4b711b59b2fe0a4c82617f08dab019ea2ca4b6cc4fa6cb3f60aeafe2a2e58692baf9398c0d30f93f95edda86761bd4 WHIRLPOOL 69b9bea0d6245583f32c6c627aa503cf1295efe98bd498aa2e9efe749e68e3e6ac01bfc1fe38b02f5d68edc0ae496894ae79516c1ce0b9c752a9e521f1b63275
 MISC metadata.xml 1357 SHA256 c30d6116cdf83062fc106ea80d843c5613ea0e7a91ea6afe17ab11077b2b7574 SHA512 e516d46b97979f83d286fb61a349cdd31e02db3de02ad2147a90e528c3ad19aab46c13c3fc72f8fcc418524b3bc50b37cf77ea2b1d05dce090d0b018dcb34224 WHIRLPOOL 02d5acf8972de51c728d469b24adb110204a0f70e57772322a65b62982a1c17d1150da36311260a606e02b694a117ced89c161ca2001b0713903caa15610da75
